build/log/idf_py_stderr_output_12561
/home/pi/remoteLED/main/remoteLED.c: In function 'extract_auth_token':
/home/pi/remoteLED/main/remoteLED.c:95:21: error: 'auth_token' undeclared (first use in this function)
   95 |             strncpy(auth_token, token->valuestring, sizeof(auth_token) - 1);
      |                     ^~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:95:21: note: each undeclared identifier is reported only once for each function it appears in
/home/pi/remoteLED/main/remoteLED.c: At top level:
/home/pi/remoteLED/main/remoteLED.c:16:13: error: expected identifier or '(' before string constant
   16 | #define TAG "ESP32_SSL"
      |             ^~~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:115:20: note: in expansion of macro 'TAG'
  115 | static const char *TAG = "ESP32_SSL";  // Logging tag
      |                    ^~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/remoteLED.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
